# vectordb-client

./: DEVELOPER_GUIDE.md  README.md  pyproject.toml
samples/open_search/: hello.py
samples/pinecone/: hello.py
src/vectordb/common/auth/: basic_auth.py
src/vectordb/common/databases/: database.py  index.py  indices.py
src/vectordb/common/transport/: http_transport.py  transport.py
src/vectordb/databases/open_search/: open_search_database.py  open_search_index.py  open_search_indices.py
src/vectordb/databases/pinecone/: pinecone_database.py  pinecone_index.py
tests/: client_test.py  test_client.py
tests/common/: config_test.py
tests/common/auth/: test_api_token.py  test_credentials.py
tests/common/databases/: test_database.py
tests/common/transport/: test_http_transport.py
tests/databases/: test_open_search_database.py  test_pinecone_database.py
vectordb/: client.py
vectordb/common/: config.py
vectordb/common/auth/: api_token.py  credentials.py
vectordb/common/databases/: database.py  index.py  indices.py
vectordb/common/transport/: http_transport.py  transport.py
vectordb/databases/open_search/: open_search_database.py
vectordb/databases/pinecone/: pinecone_database.py  pinecone_index.py  pinecone_indices.py
